--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "framer-motion": "^12.4.3",
     "next": "15.1.7",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
